Bug 269951 - OpenVPN support needs an ask password option
Summary: OpenVPN support needs an ask password option
Status: RESOLVED FIXED
Alias: None
Product: Network Management
Classification: Unmaintained
Component: OpenVPN (other bugs)
Version First Reported In: 0.9
Platform: Fedora RPMs Linux
: NOR normal
Target Milestone: ---
Assignee: Will Stephenson
URL:
Keywords:
: 270303 (view as bug list)
Depends on:
Blocks:
 
Reported: 2011-04-02 16:58 UTC by Alex Williamson
Modified: 2011-07-19 12:22 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: nm09
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Alex Williamson 2011-04-02 16:58:36 UTC
Version:           0.9 (using KDE 4.6.1) 
OS:                Linux

We use an RSA key based password with OpenVPN.  The only way to configure this with kde-plasma-networkmanagement-openvpn is to open the configuration dialog, insert the current password, then connect before the password expires.  I should be able to select a dialog that allows it to prompt for password on every connect.  VPNC appears to already have this support, OpenVPN should too.

Reproducible: Always

Steps to Reproduce:
Try to get a password prompt when connecting to an OpenVPN

Actual Results:  
Can't do it

Expected Results:  
Should be a basic configuration option

Gnome supports this, IMHO this is missing basic functionality
Comment 1 Lamarque V. Souza 2011-04-07 18:55:07 UTC
*** Bug 270303 has been marked as a duplicate of this bug. ***
Comment 2 Lamarque V. Souza 2011-06-24 19:15:08 UTC
Git commit a09ad42d7b33bbba75a4322c7e9f83d9ec2f4d1e by Lamarque V. Souza.
Committed on 24/06/2011 at 21:12.
Pushed by lvsouza into branch 'master'.

Save username from VPN configuration instead of defaulting to system's
user name.

BUG: 269951

M  +2    -1    libs/internals/settings/vpnpersistence.cpp     

http://commits.kde.org/networkmanagement/a09ad42d7b33bbba75a4322c7e9f83d9ec2f4d1e
Comment 3 Lamarque V. Souza 2011-06-24 19:19:44 UTC
Git commit d776c47cf23ac5751677b1ced095b8375952273e by Lamarque V. Souza.
Committed on 24/06/2011 at 21:17.
Pushed by lvsouza into branch 'nm09'.

Change importer to read the "UserName" setting. The VPN connection's
configuration must be set to use this setting or NM will refuse the
connection.

CCBUG: 269951

M  +1    -3    kded/settingsnm08/vpnpersistence.cpp     

http://commits.kde.org/networkmanagement/d776c47cf23ac5751677b1ced095b8375952273e
Comment 4 Lamarque V. Souza 2011-06-24 19:24:35 UTC
Sorry, I closed the wrong bug entry. This one has not been fixed yet.
Comment 5 Ilia Kats 2011-07-19 03:54:29 UTC
Git commit 3582237e508ab9dc2d56a80111a7faf6e652f97a by Ilia Kats.
Committed on 19/07/2011 at 03:58.
Pushed by iliakats into branch 'nm09'.

Port all VPN-Plugins which support this to the new secrets flags system.
Add auth-dialogs for OpenVPN and PTTP.
Fix some minor bugs

BUG: 269951
BUG: 277354
CCBUG: 274930

M  +108  -76   vpnplugins/pptp/pptpwidget.cpp
M  +0    -1    vpnplugins/vpnc/vpncauth.h
M  +0    -1    kded/settingsnm08/vpnpersistence.cpp
M  +9    -0    vpnplugins/openvpn/openvpnwidget.h
M  +1    -0    vpnplugins/openvpn/openvpn.h
M  +6    -0    vpnplugins/pptp/pptp.cpp
C  +11   -12   vpnplugins/openvpn/openvpnauth.h [from: vpnplugins/vpnc/vpncauth.h - 072% similarity]     [License: GPL]
M  +2    -1    vpnplugins/pptp/CMakeLists.txt
M  +1    -49   libs/internals/settings/vpn.h
M  +2    -4    vpnplugins/vpnc/vpncwidget.h
M  +21   -39   vpnplugins/vpnc/vpncwidget.cpp
M  +20   -18   vpnplugins/vpnc/vpncauth.cpp
M  +3    -3    vpnplugins/vpnc/vpncauth.ui
M  +3    -4    libs/internals/settings/vpnsecrets.cpp
M  +177  -66   vpnplugins/openvpn/openvpnprop.ui
M  +183  -69   vpnplugins/openvpn/openvpnwidget.cpp
C  +11   -12   vpnplugins/pptp/pptpauth.h [from: vpnplugins/vpnc/vpncauth.h - 072% similarity]     [License: GPL]
M  +0    -11   libs/internals/settings/vpn.cpp
M  +4    -1    vpnplugins/pptp/pptpwidget.h
M  +76   -94   vpnplugins/pptp/pptpauth.ui
M  +3    -7    libs/ui/vpnpreferences.cpp
A  +68   -0    vpnplugins/pptp/pptpauth.cpp     [License: GPL]
M  +28   -1    vpnplugins/pptp/pptpprop.ui
A  +172  -0    vpnplugins/openvpn/openvpnauth.cpp     [License: GPL]
M  +1    -0    vpnplugins/openvpn/CMakeLists.txt
M  +9    -15   vpnplugins/vpnc/vpnc.cpp
M  +1    -0    vpnplugins/pptp/pptp.h
M  +6    -0    vpnplugins/openvpn/openvpn.cpp

http://commits.kde.org/networkmanagement/3582237e508ab9dc2d56a80111a7faf6e652f97a