Save username from VPN configuration instead of defaulting to system's user name.

BUG: 269951